--- a/ProjectProposalGroup_Sp23_AAA-H.ipynb
+++ b/ProjectProposalGroup_Sp23_AAA-H.ipynb
@@ -8,16 +8,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Names\n",
     "\n",
-    "- Ant Man\n",
-    "- Hulk\n",
-    "- Iron Man\n",
-    "- Thor\n",
-    "- Wasp"
+    "- Anh Vuong\n",
+    "- Anh Bach\n",
+    "- Anh Pham\n",
+    "- Huy Nguyen"
    ]
   },
   {
@@ -28,14 +28,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-  Include a specific, clear data science question.\n",
-    "-  Make sure what you're measuring (variables) to answer the question is clear\n",
-    "\n",
-    "What is your research question? Include the specific question you're setting out to answer. This question should be specific, answerable with data, and clear. A general question with specific subquestions is permitted. (1-2 sentences)\n",
-    "\n"
+    "To what extent do mental health challenges impact female employees in the tech industry, and is their well-being influenced by the inclusivity and support provided by their organizations? Furthermore, are there reliable resources available to support the mental health of women in tech?\n"
    ]
   },
   {
@@ -77,15 +74,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "- Include your team's hypothesis\n",
-    "- Ensure that this hypothesis is clear to readers\n",
-    "- Explain why you think this will be the outcome (what was your thinking?)\n",
-    "\n",
-    "What is your main hypothesis/predictions about what the answer to your question is? Briefly explain your thinking. (2-3 sentences)"
+    "It is believed that biases based on gender, stereotypes, and obstacles to career advancement are causing higher stress levels among women who work in the tech industry. On top of this, women in this field are also dealing with societal expectations and family responsibilities, making it even harder to balance work and personal life. The study suggests that companies in the tech industry that prioritize inclusivity may be able to improve the mental well-being of female employees."
    ]
   },
   {
@@ -111,20 +104,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Thoughtful discussion of ethical concerns included\n",
-    "- Ethical concerns consider the whole data science process (question asked, data collected, data being used, the bias in data, analysis, post-analysis, etc.)\n",
-    "- How your group handled bias/ethical concerns clearly described\n",
+    "In order to address ethic and privacy concerns, our group focused on using datasets that are publicly available online and our project is mainly for academic purposes. Our datasets are collected answers from anonymized survey without any sensitive or personally identifying information. The survey was fully voluntary and gave consent-based instructions about the use of gathered data.\n",
+    "We believe that our datasets are unbiased and ethical because we mainly focus on analyzing a particular group to understand their unique experience, perspectives and the needs of the group without comparing to any other group in order to prevent any potential biased and false claim during our analysis. \n",
     "\n",
-    "Acknowledge and address any ethics & privacy related issues of your question(s), proposed dataset(s), and/or analyses. Use the information provided in lecture to guide your group discussion and thinking. If you need further guidance, check out [Deon's Ethics Checklist](http://deon.drivendata.org/#data-science-ethics-checklist). In particular:\n",
+    "Our group makes sure there is no bias by aiming to collect and analyze publicly available data and datasets from trusted website for our project. In order to minimize biased based on the different amount of answers from different groups, we will choose a particular group to focus on instead of comparing between different groups because our datasets are voluntary surveys, the responses for each group might be unbalanced. However, our datasets do not exclude any particular populations or likely to reflect particular human biases in a way that could be a problem and the survey questions do not target any particular group or conduct in the way that will lead to a particular group, whether that's defined by sex, age, ethnicity, etc.\n",
     "\n",
-    "- Are there any biases/privacy/terms of use issues with the data you propsed?\n",
-    "- Are there potential biases in your dataset(s), in terms of who it composes, and how it was collected, that may be problematic in terms of it allowing for equitable analysis? (For example, does your data exclude particular populations, or is it likely to reflect particular human biases in a way that could be a problem?)\n",
-    "- How will you set out to detect these specific biases before, during, and after/when communicating your analysis?\n",
-    "- Are there any other issues related to your topic area, data, and/or analyses that are potentially problematic in terms of data privacy and equitable impact?\n",
-    "- How will you handle issues you identified?"
+    "To detect any biases before our analysis, we will examine the source and methodology of the data collection, and check if there are any gaps or inconsistencies in the data. We will also review the literature on the topic and compare our data with other relevant studies. During our analysis, we will use appropriate statistical methods and visualizations to explore the data and identify any outliers, trends, or patterns that may indicate bias. We will also test our hypotheses and assumptions using inferential statistics and hypothesis testing. After our analysis, we will evaluate our results and conclusions in light of the data limitations and ethical implications. We will also seek feedback from our peers and instructors on our project report and presentation, and address any questions or concerns they may have.\n",
+    "\n",
+    "To handle any issues we identified, we will document them clearly and transparently in our project report and presentation, and acknowledge the limitations and uncertainties of our analysis. We will also suggest ways to improve the data quality and reliability in future research, and discuss the potential implications and recommendations for policy and practice based on our findings."
    ]
   },
   {
@@ -135,16 +126,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
-    "Read over the [COGS108 Team Policies](https://github.com/COGS108/Projects/blob/master/COGS108_TeamPolicies.md) individually. Then, include your group’s expectations of one another for successful completion of your COGS108 project below. Discuss and agree on what all of your expectations are. Discuss how your team will communicate throughout the quarter and consider how you will communicate respectfully should conflicts arise. By including each member’s name above and by adding their name to the submission, you are indicating that you have read the COGS108 Team Policies, accept your team’s expectations below, and have every intention to fulfill them. These expectations are for your team’s use and benefit — they won’t be graded for their details.\n",
+    "By including each member’s name above and by adding their name to the submission, you are indicating that you have read the COGS108 Team Policies, accept your team’s expectations below, and have every intention to fulfill them. These expectations are for your team’s use and benefit — they won’t be graded for their details.\n",
     "\n",
-    "* *Team Expectation 1*\n",
-    "* *Team Expectation 2*\n",
-    "* *Team Expecation 3*\n",
-    "* ..."
+    "* Our team expects to have a meeting every Sunday on Zoom to update and divide individual tasks for team members\n",
+    "* Our team expects to communicate regularly and respectfully via Discord, and respond to messages within 24 hours.\n",
+    "* Our team expects to complete the assigned tasks on time and with high quality, and notify the team in advance if there are any difficulties or delays.\n",
+    "* Our team expects to share the work load fairly and evenly, and offer help and feedback to each other when needed.\n",
+    "* Our team expects to respect each other's opinions and ideas, and resolve any conflicts or disagreements constructively and diplomatically.\n",
+    "* Our team expects to adhere to the COGS108 Team Policies and academic integrity standards, and acknowledge each other's contributions in the project submission."
    ]
   },
   {
@@ -155,6 +149,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -164,15 +159,34 @@
     "\n",
     "\n",
     "\n",
-    "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
-    "|---|---|---|---|\n",
-    "| 1/20  |  1 PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data (Ant Man); EDA (Hulk) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin Analysis (Iron Man; Thor) | Discuss/edit Analysis; Complete project check-in |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Wasp)| Discuss/edit full project |\n",
-    "| 3/19  | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |"
+    "Here is a possible rewrite of the project timeline proposal in markdown based on the web search results:\n",
+    "\n",
+    "# COGS 108 - Final Project Proposal\n",
+    "\n",
+    "## Research Question\n",
+    "\n",
+    "What are the specific effects of mental health challenges faced by female employees in the tech industry, and do their organizations inclusivity and support their well-being? Do women in tech have trusted resources to support for their mental health?\n",
+    "\n",
+    "## Hypothesis\n",
+    "\n",
+    "Female employees in the tech industry report higher levels of stress due to gender-related biases, stereotypes, and career advancement barriers. Female employees in the tech industry face greater work-life imbalance due to societal expectations and caregiving responsibilities. Organizations that foster inclusivity in the tech industry can positively impact the mental well-being of female employees.\n",
+    "\n",
+    "## Ethics & Privacy\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Project Timeline Proposal\n",
+    "\n",
+    "| Meeting Date | Meeting Time | Completed Before Meeting | Discuss at Meeting |\n",
+    "| ------------ | ------------ | ------------------------ | ------------------ |\n",
+    "| 4/30         | 12 PM        | Read & Think about COGS 108 expectations; brainstorm topics/questions | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research |\n",
+    "| 5/7          | 10 AM        | Do background research on topic; find relevant sources and datasets | Discuss ideal dataset(s) and ethics; draft project proposal |\n",
+    "| 5/14         | 10 AM        | Edit, finalize, and submit proposal; Search for more datasets if needed | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part |\n",
+    "| 5/14         | 6 PM         | Import & Wrangle Data (Anh Vuong); EDA (Anh Bach) | Review/Edit wrangling/EDA; Discuss Analysis Plan |\n",
+    "| 5/21         | 12 PM        | Finalize wrangling/EDA; Begin Analysis (Anh Pham; Huy Nguyen) | Discuss/edit Analysis; Complete project check-in |\n",
+    "| 5/28         | 12 PM        | Complete analysis; Draft results/conclusion/discussion (Anh Vuong) | Discuss/edit full project |\n",
+    "| 6/4          | Before 11:59 PM | NA                       | Turn in Final Project & Group Project Surveys |"
    ]
   },
   {
@@ -199,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
