--- a/ProjectProposalGroup_Sp23_AAA-H.ipynb
+++ b/ProjectProposalGroup_Sp23_AAA-H.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To what extent do mental health challenges impact female employees in the tech industry, and is their well-being influenced by the inclusivity and support provided by their organizations? Furthermore, are there reliable resources available to support the mental health of women in tech?\n"
+    "To what extent do mental health challenges impact female employees in the tech industry, and how does their well-being related to the inclusivity and support provided by their organizations? Furthermore, are there reliable resources available to support the mental health of women in tech industry?\n"
    ]
   },
   {
