Update Background and Prior Work

--- a/ProjectProposalGroup_Sp23_AAA-H.ipynb
+++ b/ProjectProposalGroup_Sp23_AAA-H.ipynb
@@ -47,23 +47,15 @@
    "metadata": {},
    "source": [
     "\n",
-    "- Include a general introduction to your topic\n",
-    "- Include explanation of what work has been done previously\n",
-    "- Include citations or links to previous work\n",
+    "It is widely acknowledged that employees in tech companies often face a substantial workload, leading to heightened intensity in tech positions. The fast-paced and stressful work environment common in the technology sector can adversely affect for employees' mental health. It cannot be denied that women in the tech industry, in particular, confront significant challenges, including gender bias, workplace harassment, and a lack of representation in leadership roles. The importance of mental health in the workplace has gained attention in recent years, prompting numerous IT firms to take action to support the well-being of their staff members. It remains uncertain, nevertheless, if these initiatives will be sufficient to address the particular difficulties faced by women in technology.\n",
+    "Therefore, as all members in our group are majoring in computer science and aiming to pursue careers in the technology field, we are interested in figuring out the well-being of the employee in this particular field. Additionally, due to the recent rise in mental illness in the U.S., especially during the COVID-19 pandemic, we believe that our project can shed light on the current state of employee health in tech companies, thereby, raising awareness for others.\n",
+    "To dig into the question, we conducted some research to explore the health situation in the tech industry following the emergence of COVID-19. According to a report from AppDynamics, 8 out of 10 tech professionals indicated that their jobs have become more complex since the pandemic. In the same report, 89% of tech professionals reported that they feel immense pressure at work, and 84% struggled with switching off from work [^1]. However, the health situation is even more challenging for women in the tech industry when they are considered \"minorities\" in this field. An analysis from Alicen Ricard has pointed out that \"women have so much pressure to excel in these fields because they feel like they have to be better than the men to prove they’re \"worthy\" of being there. This kind of thinking leads to imposter syndrome. This feeling out of place also leads to stress."[^2].\n",
     "\n",
-    "This section will present the background and context of your topic and question in a few paragraphs. Include a general introduction to your topic and then describe what information you currently know about the topic after doing your initial research. Include references to other projects who have asked similar questions or approached similar problems. Explain what others have learned in their projects.\n",
+    "Sources:\n",
     "\n",
-    "Find some relevant prior work, and reference those sources, summarizing what each did and what they learned. Even if you think you have a totally novel question, find the most similar prior work that you can and discuss how it relates to your project.\n",
+    "[^1]: Mentotribes, T. (9 July 2022) Mental Health - A Major Concern in the Tech Industry. *Linkedin*. https://www.linkedin.com/pulse/mental-health-major-concern-tech-industry-mentortribes/?trk=public_post-content_share-article \n",
     "\n",
-    "References can be research publications, but they need not be. Blogs, GitHub repositories, company websites, etc., are all viable references if they are relevant to your project. It must be clear which information comes from which references. (2-3 paragraphs, including at least 2 references)\n",
-    "\n",
-    " **Use inline citation through Markdown footnotes to specify which references support which statements** \n",
-    "\n",
-    "For example: After government genocide in the 20th century, real birds were replaced with surveillance drones designed to look just like birds[^lorenz]. \n",
-    "Use a minimum of 2 or 3 citations, but we prefer more[^admonish]. You need enough to fully explain and back up important facts. \n",
-    "\n",
-    "[^lorenz]: Lorenz, T. (9 Dec 2021) Birds Aren’t Real, or Are They? Inside a Gen Z Conspiracy Theory. *The New York Times*. https://www.nytimes.com/2021/12/09/technology/birds-arent-real-gen-z-misinformation.html \n",
-    "[^admonish]: Also refs should be important to the background, not some randomly chosen vaguely related stuff. Include a web link if possible in refs as above.\n"
+    "[^2]: RICARD, ALICEN. (11 May 2018) Women in STEM and Mental Health. *Simon Fraser University*. https://www.sfu.ca/wwest/WWEST_blog/the-pressure-of-being-a-woman-in-stem-and-what-it-means-for-ment.html\n",
    ]
   },
   {
