--- a/ProjectProposalGroup_Sp23_AAA-H.ipynb
+++ b/ProjectProposalGroup_Sp23_AAA-H.ipynb
@@ -52,7 +52,7 @@
     "Sources:  \n",
     "  \n",
     "[^1]: Mentotribes, T. (9 July 2022) Mental Health - A Major Concern in the Tech Industry. *Linkedin*. https://www.linkedin.com/pulse/mental-health-major-concern-tech-industry-mentortribes/?trk=public_post-content_share-article  \n",
-    "[^2]: RICARD, ALICEN. (11 May 2018) Women in STEM and Mental Health. *Simon Fraser University*. https://www.sfu.ca/wwest/WWEST_blog/the-pressure-of-being-a-woman-in-stem-and-what-it-means-for-ment.html"
+    "[^2]: Ricard, Alicen. (11 May 2018) Women in STEM and Mental Health. *Simon Fraser University*. https://www.sfu.ca/wwest/WWEST_blog/the-pressure-of-being-a-woman-in-stem-and-what-it-means-for-ment.html"
    ]
   },
   {
