--- a/ProjectProposalGroup_Sp23_AAA-H.ipynb
+++ b/ProjectProposalGroup_Sp23_AAA-H.ipynb
@@ -138,15 +138,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Meeting Date | Meeting Time | Completed Before Meeting | Discuss at Meeting |\n",
-    "| ------------ | ------------ | ------------------------ | ------------------ |\n",
-    "| 4/30         | 12 PM        | Read & Think about COGS 108 expectations; brainstorm topics/questions | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research |\n",
-    "| 5/7          | 10 AM        | Do background research on topic; find relevant sources and datasets | Discuss ideal dataset(s) and ethics; draft project proposal |\n",
-    "| 5/14         | 10 AM        | Edit, finalize, and submit proposal; Search for more datasets if needed | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part |\n",
-    "| 5/14         | 6 PM         | Import & Wrangle Data (Anh Vuong); EDA (Anh Bach) | Review/Edit wrangling/EDA; Discuss Analysis Plan |\n",
-    "| 5/21         | 12 PM        | Finalize wrangling/EDA; Begin Analysis (Anh Pham; Huy Nguyen) | Discuss/edit Analysis; Complete project check-in |\n",
-    "| 5/28         | 12 PM        | Complete analysis; Draft results/conclusion/discussion (Anh Vuong) | Discuss/edit full project |\n",
-    "| 6/4          | Before 11:59 PM | NA                       | Turn in Final Project & Group Project Surveys |"
+    "Specify your team's specific project timeline. An example timeline has been provided. Changes the dates, times, names, and details to fit your group's plan.\n",
+    "\n",
+    "If you think you will need any special resources or training outside what we have covered in COGS 108 to solve your problem, then your proposal should state these clearly. For example, if you have selected a problem that involves implementing multiple neural networks, please state this so we can make sure you know what you’re doing and so we can point you to resources you will need to implement your project. Note that you are not required to use outside methods.\n",
+    "\n",
+    "\n",
+    "\n",
+    "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
+    "|---|---|---|---|\n",
+    "| 4/30  |  12 PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
+    "| 5/2  |  10 AM |  Do background research on topic; find relevant sources and datasets,  | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
+    "| 5/3  | 10 AM  | Edit, finalize, and submit proposal; Search for more datasets if needed  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
+    "| 5/7  | 10 PM  | Import & Wrangle Data (Anh Vuong); Begin Analysis (Anh Pham; Huy Nguyen)| Review/Edit Data/EDA; Discuss Analysis Plan   |\n",
+    "| 5/16  | 6 PM  | Complete Data Checkpoint; Import EDA (Anh Bach);  | Discuss/edit Analysis; Complete and submit data check point |\n",
+    "| 5/28  | 12 PM  | Complete EDA ; Draft results/conclusion/discussion (Anh Vuong, Anh Bach)| Discuss/edit EAD and full project; Complete and submit EDA check point |\n",
+    "| 6/4  | 10 AM  | Complete full project | Review/Edit full project; Planning for video |\n",
+    "| 6/15 | Before 11:59 PM  | Review full project and video | Turn in Final Project & Group Project Surveys|"
    ]
   },
   {
