Updated research questions, hypothesis, ethics & privacy'

--- a/DataCheckpointGroup_Sp23_AAA-H.ipynb
+++ b/DataCheckpointGroup_Sp23_AAA-H.ipynb
@@ -35,7 +35,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your research question here*"
+    "* How have housing costs (rent and owner-occupied) in California change over time, and how does this compare to other states?\n",
+    "* What percentage of of a household income is typically spent on housing in California, and how does this compare to other states?\n",
+    "* What has been the population rate of California over time, and how has it changed from year to year? \n",
+    "* Does increase in housing costs affect California's populations?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hypothesis"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our group hypothesis is that there is a relationship between the decrease in California's populations and the increase in cost of spending on housing (rent and owner-occupied) in which California residents are likely to move out of state because they are not able to afford housing. \n",
+    "\n",
+    "H<sub>0</sub>: There is no relationship between increasing in cost of housing in California and California's populations\n",
+    "\n",
+    "H<sub>1</sub>: There is a relationship between increasing in cost of housing in California and California's populations"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ethics & Privacy"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to address ethics and privacy concerns, our group focused on using datasets that are publicly available online and our project is mainly for academic purposes. Our datasets are collected from government websites without sensitive or personally identifying information. We believe that our datasets are unbiased and ethical because we mainly focus on analyzing data on California’s populations and housing costs and comparing them to other states to see if there possibly is a relationship between housing costs and populations without focusing on any human bias. Our group makes sure there is no bias by aiming to collect and analyze publicly available data and datasets from trusted websites for our project and our datasets do not exclude any particular populations or are likely to reflect particular human biases in a way that could be a problem. Our datasets also do not target any particular group or conduct in a way that will lead to a particular group, whether that's defined by sex, age, ethnicity, etc. \n",
+    "\n",
+    "To detect any biases before our analysis, we will examine the source and methodology of the data collection, and check if there are any gaps or inconsistencies in the data. We will also review the literature on the topic and compare our data with other relevant studies. During our analysis, we will use appropriate statistical methods and visualizations to explore the data and identify any outliers, trends, or patterns that may indicate bias. We will also test our hypotheses and assumptions using inferential statistics and hypothesis testing. After our analysis, we will evaluate our results and conclusions in light of the data limitations and ethical implications. We will also seek feedback from our peers and instructors on our project report and presentation, and address any questions or concerns they may have. \n",
+    "\n",
+    "To handle any issues we identified, we will document them clearly and transparently in our project report and presentation, and acknowledge the limitations and uncertainties of our analysis. We will also suggest ways to improve the data quality and reliability in future research and discuss the potential implications and recommendations for policy and practice based on our findings.\n",
+    "\n"
    ]
   },
   {
@@ -52,6 +96,10 @@
    "metadata": {},
    "source": [
     "*Fill in your dataset information here*\n",
+    "\n",
+    "https://data.census.gov/table?q=state+housing+cost&tid=ACSST1Y2021.S2503\n",
+    "https://data.census.gov/table?q=state+housing+cost&tid=ACSDP1Y2021.DP04\n",
+    "https://www2.census.gov/programs-surveys/popest/datasets/2020-2022/state/totals/\n",
     "\n",
     "(Copy this information for each dataset)\n",
     "- Dataset Name:\n",
