Added background and prior work

--- a/DataCheckpointGroup_Sp23_AAA-H.ipynb
+++ b/DataCheckpointGroup_Sp23_AAA-H.ipynb
@@ -46,6 +46,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Background and Prior Work"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is widely acknowledged that California is the most populated state in the United States, with nearly 40 million residents, but only the third largest state. As a result, there is a conflict between the population and area in California, thus leading to the increasing trend in housing prices in recent years. In fact, the socioeconomic makeup of a region is significantly influenced by housing costs and population trends. This project intends to examine historical housing cost increases in California, compare them to those in other states, and comprehend any prospective effects on the state's population.\n",
+    "\n",
+    "As all members of our group are California residents and are renting a place to live off-campus, we can feel the pressure while paying the rent. Especially after the emergence of the COVID-19 pandemic, there was an increasing trend in housing prices in California, and some news reports reported that more Californians were moving out of state due to the housing situation. Hence, we are interested in determining the relationship between the increasing cost of housing and California’s population.\n",
+    "\n",
+    "To dig into the question, we conducted some research to explore the housing situation in California following the emergence of COVID-19. According to a report from John Duca and Anthony Murphy, in the wake of the short but steep COVID-19 recession, house prices have risen at record levels in recent months, hitting a peak increase of 19.3 percent in July 2021. These double-digit increases represent a stark departure from what occurred before the pandemic—from early 2013 to early 2020—when house prices rose at a moderate annual rate of about 5 percent and exceeded the rate of increase in rents (1). Then, we do some research to get a good understanding of the housing market in California compared to other states in the U.S. An analysis by Jack Caporal and Lyle Daly pointed out that the typical home price in California is $728,000, which is 218% of the typical U.S. price, and that California has the second highest typical home value in the United States and the second lowest income-to-home-value ratio, despite residents making 22% more than the median U.S. income (2). Lastly, we look at the California population trend in recent years. A report from Calmatters stated that according to the latest population estimates from the U.S. Census Bureau, California’s total population declined by more than 500,000 between April 2020 and July 2022. Put another way, 1 out of 100 people living in California at the beginning of the COVID-19 pandemic had, two years later, left the state — either by U-Haul or by hearse (3).\n",
+    "\n",
+    "References (include links):\n",
+    "\n",
+    "https://www.dallasfed.org/research/economics/2021/1228\n",
+    "\n",
+    "https://www.fool.com/the-ascent/research/average-house-price-state/\n",
+    "\n",
+    "https://calmatters.org/newsletters/whatmatters/2023/02/california-population-exodus-housing/\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Hypothesis"
    ]
   },
