--- a/DataCheckpointGroup_Sp23_AAA-H.ipynb
+++ b/DataCheckpointGroup_Sp23_AAA-H.ipynb
@@ -35,10 +35,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* How have housing costs (rent and owner-occupied) in California change over time, and how does this compare to other states?\n",
-    "* What percentage of of a household income is typically spent on housing in California, and how does this compare to other states?\n",
-    "* What has been the population rate of California over time, and how has it changed from year to year? \n",
-    "* Does increase in housing costs affect California's populations?"
+    "* How have housing costs (rent and owner-occupied) in California change over time from 2020 to 2022, and how does this compare to Texas?\n",
+    "* What percentage of of a household income is typically spent on housing in California from 2020 to 2022, and how does this compare to Texas?\n",
+    "* What has been the population rate of California over time, and how has it changed from 2020 to 2022? \n",
+    "* Does increase in housing costs affect the decreasing in California's populations from 2020 to 2022?"
    ]
   },
   {
@@ -82,11 +82,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our group hypothesis is that there is a relationship between the decrease in California's populations and the increase in cost of spending on housing (rent and owner-occupied) in which California residents are likely to move out of state because they are not able to afford housing. \n",
+    "Our group hypothesis is that there is a relationship between the decrease in California's populations and the increase in cost of spending on housing (rent and owner-occupied) from 2020 to 2022 in which California residents are likely to move out of state because they are not able to afford housing. \n",
     "\n",
-    "H<sub>0</sub>: There is no relationship between increasing in cost of housing in California and California's populations\n",
+    "H<sub>0</sub>: There is no relationship between increasing in cost of housing in California and the decreasing in California's populations.\n",
     "\n",
-    "H<sub>1</sub>: There is a relationship between increasing in cost of housing in California and California's populations"
+    "H<sub>1</sub>: There is a relationship between increasing in cost of housing in California and the decreasing in California's populations."
    ]
   },
   {
@@ -126,9 +126,7 @@
     "*Fill in your dataset information here*\n",
     "\n",
     "https://data.census.gov/table?q=state+housing+cost&tid=ACSST1Y2021.S2503\n",
-    "\n",
     "https://data.census.gov/table?q=state+housing+cost&tid=ACSDP1Y2021.DP04\n",
-    "\n",
     "https://www2.census.gov/programs-surveys/popest/datasets/2020-2022/state/totals/\n",
     "\n",
     "(Copy this information for each dataset)\n",
