--- a/DataCheckpointGroup_Sp23_AAA-H.ipynb
+++ b/DataCheckpointGroup_Sp23_AAA-H.ipynb
@@ -82,11 +82,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our group hypothesis is that there is a relationship between the decrease in California's populations and the increase in cost of spending on housing (rent and owner-occupied) from 2020 to 2022 in which California residents are likely to move out of state because they are not able to afford housing. \n",
+    "Our group hypothesis is that there is a relationship between the decrease in California's populations and the increase in cost of spending on housing (rent and owner-occupied) from 2020 to 2021 in which California residents are likely to move out of state because they are not able to afford housing. \n",
     "\n",
-    "H<sub>0</sub>: There is no relationship between increasing in cost of housing in California and the decreasing in California's populations.\n",
+    "H<sub>0</sub>: There is no relationship between increasing in cost of housing in California and the decreasing in California's populations from 2020 to 2021.\n",
     "\n",
-    "H<sub>1</sub>: There is a relationship between increasing in cost of housing in California and the decreasing in California's populations."
+    "H<sub>1</sub>: There is a relationship between increasing in cost of housing in California and the decreasing in California's populations from 2020 to 2021."
    ]
   },
   {
