--- a/DataCheckpointGroup_Sp23_AAA-H.ipynb
+++ b/DataCheckpointGroup_Sp23_AAA-H.ipynb
@@ -133,7 +133,7 @@
     "- Link to the dataset: https://files.zillowstatic.com/research/public_csvs/zhvi/City_zhvi_uc_sfrcondo_tier_0.33_0.67_sm_sa_month.csv?t=1684286197\n",
     "- Number of observations: 22258\n",
     "\n",
-    "The Home Values dataset is found on Zillow. The dataset contains home values (including house, single family residential home, condo and cooperative housing) for different regions in the U.S, dates and states.\n",
+    "The Home Values dataset is found on Zillow. The dataset contains home values (including house, single family residential home, condo and cooperative housing) for different regions in the U.S., dates and states.\n",
     "\n",
     "Our analysis involves three interconnected datasets: California and Texas populations, housing prices, and the percentage of residents' income spent on housing. By examining these datasets, we aim to uncover trends in population growth or decline as well as changes in housing costs (both rentals and home values) from 2020 to 2021 in both states. Furthermore, we will investigate whether there is a burden on residents in terms of housing expenses and explore if this factor contributes to the migration of California residents to other states."
    ]
@@ -1523,7 +1523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, we want to create two different tables (rentals and home values) for California and Texas separately and sort prices in ascending order for futher analysis."
+    "Then, we want to create two different tables (rentals and home values) for California and Texas separately futher analysis."
    ]
   },
   {
