--- a/EDACheckpointGroup_Sp23_AAA-H.ipynb
+++ b/EDACheckpointGroup_Sp23_AAA-H.ipynb
@@ -15,11 +15,10 @@
    "source": [
     "# Names\n",
     "\n",
-    "- Ant Man\n",
-    "- Hulk\n",
-    "- Iron Man\n",
-    "- Thor\n",
-    "- Wasp"
+    "- Anh Vuong\n",
+    "- Anh Bach\n",
+    "- Anh Pham\n",
+    "- Huy Nguyen"
    ]
   },
   {
