--- a/EDACheckpointGroup_Sp23_AAA-H.ipynb
+++ b/EDACheckpointGroup_Sp23_AAA-H.ipynb
@@ -10301,7 +10301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we need to clean the combination dataframe by creating a dictionary for the income and housing costs and replacing the `Household Income Index` and `Housing Cost Index` columns with `income_mapping` and `housing_cost_mapping` before dropping the duplicate columns. After that, we also format data for further analysis and decision-making as previous steps."
+    "Now, we need to clean the combination dataframe by creating a dictionary for the income and housing costs and replacing the `Income Income Index` and `Housing Cost Index` columns with `income_mapping` and `housing_cost_mapping` before dropping the duplicate columns. After that, we also format data for further analysis and decision-making as previous steps."
    ]
   },
   {
